nlamah/src/main/resources/org/nlamah/QLS/test/error/illegalfontname.qls
stylesheet test
{
	default number font: "Arialal"
}